fixed issues with the horizontal overflow

--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
 body{
   --tw-bg-opacity: 1;
   background-color: rgb(0 4 15/var(--tw-bg-opacity));
-overflow-x: hidden;
+overflow-x: hidden !important;
 }
 .brand{
   cursor:pointer;
